tests/compiler/test_files/wrong_hex_string_literal.swift
// error

var abc45 = "\u{aXb48c}" 
